--- a/aboly.html
+++ b/aboly.html
@@ -517,7 +517,7 @@ img.characterimg {
 </ul></div>
 <div class="lyblobremark">
 <p>《论语》开篇采用孔子直抒胸臆的一段话，传达了儒家关注的几个重点主题：<a href="#topicxue2">学习</a>、<a href="#topicyou3">朋友</a>、<a href="#topicrenwo">人我</a>、<a href="#topicjunzi">君子</a>。琅琅上口，值得玩味。</p>
-<p>最后一句“人不知而不愠”，“知”的所指并不确定。知道我有才能（而任用我），只是讲得通的解释之一。正因为如此，才留下无尽想象空间，成为未尽之妙。就像英语里简单的“You don't know me!”，是适合多种语境的。比如还可以想成，孔子是在表达对于“人与人沟通之难”的看法，“知”是指对方有没有理解“我为什么要这样说、做、想”。人与人能不能真正相互理解？生活中，沟通多有偏差，矛盾常出自误会，有时候自己也难以理解自己。孔子不在这种抽象问题上纠结，而是豁达地说，“就算人家没理解我，我也不生气”，这是他的典型风格。<span class="lyseealso"><span>【参】</span><span><a href="#12.22" class="lyref">12.22</a> <span class="lyq">问<a href="#zhi4d">知</a>，子曰：“知人。”</span></span></span></p>
+<p>最后一句“人不知而不愠”，“知”的所指并不确定。知道我有才能（而任用我），只是讲得通的解释之一。正因为如此，才留下无尽想象空间，成为未尽之妙。就像英语里简单的“You don't know me!”，是适合多种语境的。比如还可以想成，孔子是在表达对于“人与人沟通之难”的看法，“知”是指对方有没有理解“我为什么要这样说、做、想”。人与人能不能真正相互理解？生活中，沟通多有偏差，矛盾常出自误会，有时候自己也难以理解自己。孔子不在这种抽象问题上纠结，而是豁达地说，“就算人家没理解我，我也不生气”，这是他的典型风格。<span class="lyseealso"><span>【参】</span><span><a href="#12.22" class="lyref">12.22</a> <span class="lyq">问<a href="#zhi4d">知</a>，子曰：“知人。”</span><a href="#14.35" class="lyref">14.35</a> <span class="lyq">子曰：“莫我知也夫！……不怨天，不尤人，下学而上达。”</span></span></span></p>
 </div>
 </div>
 <a id="1.2"></a><div class="lyblob">
@@ -5239,7 +5239,7 @@ img.characterimg {
 <p>这是《论语》比较独特的一章，通过文采斐然的铺陈辨难，表达了孔子的治国思想。尤其是最后一段的议论，可以参看《礼记·<a href="#lijiliyun">礼运</a>》。</p>
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">颛臾</span>（<span class="lypinyin">zhuān yú</span>）：鲁国境内的一个<a href="#fuyong">附庸国</a>，位于季氏的封邑<a href="#feiyi">费邑</a>西北约80里，相传为<a href="#sanhuang">伏羲</a>的后代所建。周初受<a href="#chengwang">成王</a>封，负责主持祭祀蒙山（位于鲁国境内偏东，与颛臾相邻），即为<span class="lyterm">东蒙主</span>。本章的情节应发生在孔子<a href="#jikangzi">返鲁</a>之后。这次军事活动未见于现存史料，不知是不是孔子的劝阻起了效果。</p></li>
-<li><p><a id="youshi"></a><span class="lyterm">有事</span>：有国家大事，这里指发动战争。<a id="shi4d"></a><span class="lyterm">事</span>：特指天子、诸侯层面的祭祀、会盟、战争等政治要务。<span class="lyexample"><span>【例】</span><span>《谷梁传·隐公十一年》：<span class="lyq">天子无事，诸侯相朝，正也。</span>东晋范宁注：<span class="lyq">事谓巡守、崩葬、兵<a href="#sheng4a">革</a>之事。</span></span></span></p></li>
+<li><p><a id="youshi"></a><span class="lyterm">有事</span>：有国家大事，这里指发动战争。<a id="shi4d"></a><span class="lyterm">事</span>：特指天子、诸侯层面的祭祀、会盟、战争等重大举措，action。<span class="lyexample"><span>【例】</span><span>《谷梁传·隐公十一年》：<span class="lyq">天子无事，诸侯相朝，正也。</span>东晋范宁注：<span class="lyq">事谓巡守、崩葬、兵<a href="#sheng4a">革</a>之事。</span></span></span></p></li>
 <li><p><span class="lyterm"><a href="#wunai">无乃</a>尔<a href="#shi4">是</a>过与？</span>：难道不该怪罪你吗？当时冉求和子路都是季氏家臣，冉求曾为之<a href="#11.17">聚敛而附益</a>，应该已很受重用了。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">夫子所以深罪之，为其瘠鲁以肥<a href="#sanhuan">三家</a>也。</span></span></span></p></li>
 <li><p><span class="lyterm">夫子</span>：指季氏宗主<a href="#jikangzi">季康子</a>。</p></li>
 <li>
@@ -6064,18 +6064,21 @@ img.characterimg {
 <li><p><span class="lyterm">室家</span>：房舍，这属于普通人家的资产。</p></li>
 <li><p><a id="ren4"></a><span class="lyterm">仞</span>（<span class="lypinyin">rèn</span>）：长度单位，标准是成年人的臂展，合周制8 <a href="#chi3">尺</a> ≈ 汉制7尺 ≈ 1.6米。</p></li>
 <li><p><span class="lyterm"><a href="#zongmiao">宗庙</a>之美，百官之富</span>：宗庙的壮美，各种馆舍的齐备，这属于王侯之家的气象。<a id="guan1"></a><span class="lyterm">官</span>：官舍，官吏办公处，这是其本义。</p></li>
-<li><p><span class="lyterm">夫子之云</span>里的<span class="lyterm">夫子</span>，指叔孙武叔。</p></li>
+<li><p><span class="lyterm">夫子之云</span>里的<span class="lyterm">夫子</span>，指叔孙武叔。<span class="lyterm">云</span>用作名词，说的话，意思是“会这样说”，近似于 <a href="#12.8" class="lyref">12.8</a> <span class="lyq">夫子之说君子也。</span></p></li>
 <li><p><span class="lyterm">宜</span>：合适，引申为当然，难怪，容易理解。<span class="lyexample"><span>【例】</span><span>苏舜钦《答马永书》：<span class="lyq">苟去其位，则道日益舒，宜其安而无闷也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="19.24"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.24">19.24</a></div>
 <div class="lybloboriginaltext"><p><a href="#shusunwushu">叔孙武叔</a>毁仲尼。<a href="#zigong">子贡</a>曰：“无以为也！仲尼不可毁也。他人之贤者，丘陵也，犹可逾也；仲尼，日月也，无得而逾焉。人虽欲自绝，其何伤于日月乎？多见其不知量也。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize">
+<div class="lyblobannotation">
+<ul class="lyblobitemize">
 <li><p><span class="lyterm">自绝</span>：自行断绝关系（于日月）。</p></li>
 <li><p><span class="lyterm">多</span>：表示后果的副词，适足以，仅仅，只，mainly，merely，only。<span class="lyexample"><span>【例】</span><span>《左传·襄公十四年》：<span class="lyq">吾令实过，悔之何及？多<a href="#wei4">遗</a>秦禽。</span>（禽：通“擒”。）</span></span></p></li>
 <li><p><span class="lyterm">量</span>（<span class="lypinyin">liàng</span>）：器量，指学问修养的深浅高低。<span class="lyterm">其不知量</span>相当于说不明白他自己几斤几两。</p></li>
-</ul></div>
+</ul>
+<p><span class="lyseealso"><span>【参】</span><span>东汉译《四十二章经》第8章：<span class="lyq">佛言：恶人害贤者，犹仰天而唾，唾不至天，还从已堕；逆风扬尘，尘不至彼，还坌己身。贤不可毁，祸必灭己。</span>（坌（<span class="lypinyin">bèn</span>）：（尘污）溅及。）</span></span></p>
+</div>
 </div>
 <a id="19.25"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.25">19.25</a></div>
