--- a/aboly.html
+++ b/aboly.html
@@ -2756,7 +2756,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="liuchizhigu"></a><span class="lyterm">托六尺之孤</span>：托付未成年的遗孤。<span class="lyterm">托孤</span>特指君主临终前把（即将成为孤儿的）幼主托付出去。古代<span class="lyterm">六尺</span>指未成年，即15岁以下；七尺指20岁。<a id="chi3"></a><span class="lyterm">尺</span>的实际长度随着时代演变，总体上越往古代越短。周朝1尺约合20.1厘米，六尺约为1.2米；秦汉的1尺就增至23.1厘米。<a id="bu4"></a>另据《周礼·地官司徒·小司徒》郑玄注引《司马法》，六尺即为一<span class="lykeyword">步</span>。</p></li>
 <li><p><span class="lyterm">寄百里之<a href="#ming4">命</a></span>：古注多解释为寄托整个国家的政令，意指暂时代理国政。如果和前面的“托孤”连起来看，明显的例子是<a href="#zhougong">周公</a>为成王摄政。也不妨分开理解，即寄托整个国家的命运。<span class="lyterm">百里</span>属于<a href="#bingyi">诸侯国</a>的规模，这里未必是实指。</p></li>
-<li><p><a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。</span></span><span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">须是才节兼全，方谓之君子。若无其才而徒有其节，虽死何益！……故伊川说：“君子者，才德出众之名。”孔子曰：“<a href="#2.12">君子不器</a>。”既曰君子，须是事事理会得方可。</span>（伊川：程颐，北宋理学家，洛阳伊川人。）</span></span></p></li>
+<li><p><a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。《后汉书·明帝纪》载，明帝登基后，封赏开国元勋邓禹、同母弟刘苍，诏书中赞扬他们<span class="lyq">可以受六尺之托，临大节而不<a href="#nao2">挠</a></span>，就是借用了本章。</span></span><span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">须是才节兼全，方谓之君子。若无其才而徒有其节，虽死何益！……故伊川说：“君子者，才德出众之名。”孔子曰：“<a href="#2.12">君子不器</a>。”既曰君子，须是事事理会得方可。</span>（伊川：程颐，北宋理学家，洛阳伊川人。）</span></span></p></li>
 <li><p><a id="duo2"></a><span class="lyterm">夺</span>：本义为强取，引申为迫使意志、信念等产生动摇或改变。<span class="lyexample"><span>【例】</span><span><a href="#9.26" class="lyref">9.26</a> <span class="lyq">三军可夺帅也，匹夫不可夺志也。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -3525,7 +3525,10 @@ img.characterimg {
 <p><span class="lyterm">虽狎必变</span>：就算是（平时）关系亲密不拘礼的，也一定要严肃表情，端正仪态。<a id="xia2"></a><span class="lyterm">狎</span>：（态度不庄重的）亲近，本义为和狗玩得熟。</p>
 <p><span class="lyterm">虽亵必以貌</span>的意思也近似，<span class="lyterm"><a href="#xie4">亵</a></span>同样是（态度不庄重的）亲近。<span class="lyseealso"><span>【参】</span><span><a href="#9.10" class="lyref">9.10</a> </span></span></p>
 </li>
-<li><p><span class="lyterm">凶服者式之，式负版者</span>：（乘车时）遇到穿丧服的人，要微躬身手扶着轼木（致以同情和慰问），（哪怕是）对小商贩也应如此。<span class="lyterm">式</span>：通“轼”，车厢前的横木，用作车内扶手。手扶轼木微躬身，是向经过的人致意。<span class="lyterm">版</span>：通“贩”。<span class="lyterm">负版</span>：挑着担子走四方做生意的小商贩。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">夫礼者，自卑而尊人，虽负贩者，必有尊也，而况富贵乎？</span></span></span><span class="lyseealso"><span>【参】</span><span>中国自古以农为本，商人不直接创造价值，社会地位较低，《韩非子·五<a href="#du4">蠹</a>》形容商人<span class="lyq">蓄积待时，而侔农夫之利</span>（侔（<span class="lypinyin">móu</span>）：谋取），称之为国家的蛀虫。《管子·四匡》提出的<span class="lyq"><a href="#shi4c">士</a>农工商</span><span class="lykeyword">四民</span>，常被视作<a href="#shu4b">庶人</a>阶层的既定位序，直到近代西方的通商船舰冲破古老中国的门户。</span></span></p></li>
+<li>
+<p><span class="lyterm">凶服者式之，式负版者</span>：（乘车时）遇到穿丧服的人，要微躬身手扶着轼木（致以同情和慰问），（哪怕是）对小商贩也应如此。<span class="lyterm">式</span>：通“轼”，车厢前的横木，用作车内扶手。手扶轼木微躬身，是向经过者致意。<span class="lyexample"><span>【例】</span><span>《后汉书·明帝纪》：<span class="lyq">帝谒陵园，过式其墓。</span>（其：指萧何、霍光。）李贤注引《东观汉记》：<span class="lyq">式，敬也。《礼记》曰：“行过墓必式。”</span></span></span></p>
+<p><span class="lyterm">版</span>：通“贩”。<span class="lyterm">负版</span>：挑着担子走四方做生意的小商贩。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">夫礼者，自卑而尊人，虽负贩者，必有尊也，而况富贵乎？</span></span></span><span class="lyseealso"><span>【参】</span><span>中国自古以农为本，商人不直接创造价值，社会地位较低，《韩非子·五<a href="#du4">蠹</a>》形容商人<span class="lyq">蓄积待时，而侔农夫之利</span>（侔（<span class="lypinyin">móu</span>）：谋取），称之为国家的蛀虫。《管子·四匡》提出的<span class="lyq"><a href="#shi4c">士</a>农工商</span><span class="lykeyword">四民</span>，常被视作<a href="#shu4b">庶人</a>阶层的既定位序，直到近代西方的通商船舰冲破古老中国的门户。</span></span></p>
+</li>
 <li><p><a id="lie4"></a><span class="lyterm">烈</span>：本义为火势猛，引申为强度高，程度深，相当于疾，强，甚。</p></li>
 </ul></div>
 </div>
@@ -4848,14 +4851,14 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="gaozongliangyin"></a><span class="lyterm">高宗谅阴，三年不言</span>：出自《尚书·周书·无逸》，指<a href="#shangchao">商</a>王武丁即位之初，为父守丧三年，沉默怀思，不过问朝政。武丁是商朝第23代君王，<a href="#taimiao">庙</a>号为<span class="lyterm">高宗</span>，前1250年—前1192年在位，是使殷商中兴的著名贤王。目前出土的甲骨文和青铜器大部分就来自武丁时期。<span class="lyterm">谅阴</span>：专指帝王守丧。</p></li>
 <li><p><a id="hong1"></a><span class="lyterm">薨</span>（<span class="lypinyin">hōng</span>）：周朝时称诸侯之死。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼下》：<span class="lyq">天子死曰崩，诸侯曰薨，大夫曰卒，士曰不禄，庶人曰死。</span></span></span></p></li>
-<li><p><span class="lyterm">总己</span>：各统己职，有小心谨慎的意味。<span class="lyexample"><span>【例】</span><span>《后汉书·孝献帝纪》：<span class="lyq">曹操自为司空，行车骑将军事，百官总己以听。</span></span></span><span class="lyterm">总</span>：集中，统领，本义为把头发聚拢束起来。</p></li>
+<li><p><span class="lyterm">总己</span>：各统己职，有小心谨慎的意味。<span class="lyexample"><span>【例】</span><span>《后汉书·献帝纪》：<span class="lyq">曹操自为司空，行车骑将军事，百官总己以听。</span></span></span><span class="lyterm">总</span>：集中，统领，本义为把头发聚拢束起来。</p></li>
 <li><p><span class="lyterm">听于冢（<span class="lypinyin">zhǒng</span>）宰</span>：服从冢宰的命令。<span class="lyterm">冢宰</span>：即<a href="#taizai">太宰</a>。先君去世后，冢宰代理朝政3年，嗣君得以专心服丧。<span class="lyseealso"><span>【参】</span><span>《尚书·周书·周官》（伪）：<span class="lyq">冢宰掌邦治，统百官，均<a href="#sihai">四海</a>。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="14.41"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.41">14.41</a></div>
 <div class="lybloboriginaltext"><p>子曰：“上好礼，则民易使也。”</p></div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#13.4" class="lyref">13.4</a> </span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#13.4" class="lyref">13.4</a> <span class="lyq">上好礼，则民莫敢不敬。</span></span></span></p></div>
 </div>
 <a id="14.42"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.42">14.42</a></div>
@@ -4864,7 +4867,7 @@ img.characterimg {
 <p>曰：“如斯而已乎？”曰：“修己以安人。”</p>
 <p>曰：“如斯而已乎？”曰：“修己以安百姓。修己以安百姓，<a href="#yao">尧</a><a href="#shun">舜</a>其犹病诸！”</p>
 </div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#6.30" class="lyref">6.30</a> </span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#6.30" class="lyref">6.30</a> <span class="lyq">博施于民而能济众，……必也圣乎！尧舜其犹病诸！</span></span></span></p></div>
 </div>
 <a id="14.43"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.43">14.43</a></div>
@@ -6187,7 +6190,7 @@ img.characterimg {
 <p><a id="lao"></a><span class="lycharname">牢</span>：《论语》中身份最模糊的弟子，据《孔子家语》王肃序：孔子<span class="lyq">弟子有琴张，一名牢，字子开，亦字张，卫人也</span>，后世多认为是王肃的伪撰。 <a href="#9.7" class="lyref">9.7</a> </p>
 <p><a id="minziqian"></a><span class="lycharname">闵子骞</span>（<span class="lypinyin">qiān</span>），<span class="lycharname">闵子</span>：闵损，字子骞，鲁国人，少孔子15岁，<a href="#11.3">孔门十哲</a>之一。他是元代编录的童蒙读物《二十四孝》第4个故事“<a href="#danyishunmu">单衣顺母</a>”（又称“鞭打芦花”）的主角。今山东省济南市孝文化博物馆内及河南省濮阳市范县，均有闵子骞墓。 <a href="#6.9" class="lyref">6.9</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.5" class="lyref">11.5</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.14" class="lyref">11.14</a> </p>
 <p><a id="nangongkuo"></a><span class="lycharname">南宫适</span>（<span class="lypinyin">kuò</span>），<span class="lycharname">南容</span>：字子容，鲁国人，孔子的<a href="#5.2">侄女婿</a>。《孔子家语·弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">独居思仁，公言言义。</span><a href="#5.2" class="lyref">5.2</a> <a href="#11.6" class="lyref">11.6</a> <a href="#14.5" class="lyref">14.5</a> </p>
-<p><a id="qidiaokai"></a><span class="lycharname">漆雕开</span>：字子若，蔡国人，少孔子11岁，是孔子之后的<a href="#zizhang">八儒</a>之一。《孔子家语·七十二弟子解》说他<span class="lyq">习《<a href="#shangshu">尚书</a>》，不乐仕。</span>《韩非子·显学》说他方正刚直，<span class="lyq">不色挠，不目逃，行曲则违于臧获，行直则怒于诸侯，世主以为<a href="#lian2">廉</a>而礼之。</span>（挠：屈。目逃：避视。违：避。臧获：奴婢的贱称，骂奴为臧，骂婢为获。）漆雕开墓在今河南省驻马店市上蔡县。 <a href="#5.6" class="lyref">5.6</a> </p>
+<p><a id="qidiaokai"></a><span class="lycharname">漆雕开</span>：字子若，蔡国人，少孔子11岁，是孔子之后的<a href="#zizhang">八儒</a>之一。《孔子家语·七十二弟子解》说他<span class="lyq">习《<a href="#shangshu">尚书</a>》，不乐仕。</span>《韩非子·显学》说他方正刚直，<span class="lyq">不色挠，不目逃，行曲则违于臧获，行直则怒于诸侯，世主以为<a href="#lian2">廉</a>而礼之。</span>（<a id="nao2"></a>挠：屈。目逃：避视。违：避。臧获：奴婢的贱称，骂奴为臧，骂婢为获。）漆雕开墓在今河南省驻马店市上蔡县。 <a href="#5.6" class="lyref">5.6</a> </p>
 <p><a id="ranqiu"></a><span class="lycharname">冉求</span>，<span class="lycharname">冉有</span>，<span class="lycharname">冉子</span>，<span class="lycharname">求</span>：冉求，字子有，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。他多才多艺，精明务实，曾跟随孔子周游，后来成为<a href="#jikangzi">季康子</a>的得力家臣，不久孔子就被迎接返鲁了。直到前472年（《左传·哀公二十三年》），还有他奉季康子之命赴宋国吊唁的记录。 <a href="#3.6" class="lyref">3.6</a> <a href="#5.8" class="lyref">5.8</a> <a href="#6.4" class="lyref">6.4</a> <a href="#6.8" class="lyref">6.8</a> <a href="#6.12" class="lyref">6.12</a> <a href="#7.15" class="lyref">7.15</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.17" class="lyref">11.17</a> <a href="#11.22" class="lyref">11.22</a> <a href="#11.24" class="lyref">11.24</a> <a href="#11.26" class="lyref">11.26</a> <a href="#13.9" class="lyref">13.9</a> <a href="#13.14" class="lyref">13.14</a> <a href="#14.12" class="lyref">14.12</a> <a href="#16.1" class="lyref">16.1</a> </p>
 <p><a id="shencheng"></a><span class="lycharname">申枨</span>（<span class="lypinyin">chéng</span>）：字周，鲁国人，事迹不详。 <a href="#5.11" class="lyref">5.11</a> </p>
 <p><a id="simaniu"></a><span class="lycharname">司马牛</span>：司马耕，向氏，字子牛，宋国人，是<a href="#huantui">桓魋</a>的弟弟，因为桓魋任宋国司马，故又以司马为氏。《仲尼弟子列传》说他<span class="lyq">多言而躁</span>，可能是根据 <a href="#12.3" class="lyref">12.3</a>  的推想。桓魋叛乱失败后，司马牛退还宋国的封地，辗转于齐、吴、宋，最终死在鲁国城外。 <a href="#12.3" class="lyref">12.3</a> <a href="#12.4" class="lyref">12.4</a> <a href="#12.5" class="lyref">12.5</a> </p>
