--- a/aboly.html
+++ b/aboly.html
@@ -530,6 +530,7 @@ img.characterimg {
 <p><a id="xiao4"></a><span class="lyterm">孝</span>：子女敬爱、尽心尽力侍奉父母，其甲骨文字形像年少者搀扶老人行走。<span class="lyseealso"><span>【参】</span><span>西汉贾谊《新书·道术》：<span class="lyq">子爱利亲谓之孝，反孝为孽。</span>（爱利：爱之利之。）对应地，父母关爱子女称为<span class="lykeyword"><a href="#ci2">慈</a></span>。《<a href="#xiaojing">孝经</a>·开宗明义》：<span class="lyq">夫孝，<a href="#de2">德</a>之本也，教之所由生也。</span>《汉书·宣帝纪》载，地节四年（前66年）宣帝诏书开头就说：<span class="lyq">导民以孝，则天下顺。</span></span></span></p>
 <p><a id="ti4"></a><span class="lyterm">弟</span>：通“悌”（<span class="lypinyin">tì</span>），弟弟敬爱哥哥。对应地，哥哥爱护弟弟称为<span class="lykeyword">友</span>。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">孝乎惟孝，友于兄弟，施于有政。</span></span></span><span class="lyseealso"><span>【参】</span><span>清代李塨（<span class="lypinyin">gōng</span>）《大学传注》：<span class="lyq">家之所以孝亲、弟兄、慈幼，即国之所以事君事长。</span></span></span></p>
 <p><span class="lyterm"><a href="#hao4">好</a></span>（<span class="lypinyin">hào</span>）：动词，喜欢，偏爱，易于。</p>
+<p><span class="lyterm">犯上</span>：冒犯尊长君上。后面的<span class="lyterm">作乱</span>，是做悖逆争斗之事，尤指谋反暴乱。后来有成语“犯上作乱”，在古代普遍认为是“大逆不道”之罪，即使大赦天下也常不在减刑之列。</p>
 </li>
 <li><p><a id="xian3"></a><span class="lyterm">鲜</span>（<span class="lypinyin">xiǎn</span>）：稀少，少有。<span class="lyexample"><span>【例】</span><span>成语“鲜为人知”。</span></span></p></li>
 <li><p><a id="nzhiv"></a><span class="lyterm">未之有也</span>：“未有之也”的倒装。代词<span class="lyterm">之</span>在否定句中做宾语时，常会提到动词V与否定词N中间，形成“N之V”的倒装结构，增强了否定的语气。否定词是未、莫时，这种结构尤其常见。<span class="lyexample"><span>【例】</span><span><a href="#5.14" class="lyref">5.14</a> <span class="lyq">子路有闻，未之能行，唯恐有闻。</span><a href="#13.15" class="lyref">13.15</a> <span class="lyq">如其善而莫之违也，不亦善乎？</span>《礼记·礼器》：<span class="lyq">故作事不以礼，弗之敬矣；出言不以礼，弗之信矣。</span></span></span></p></li>
@@ -846,7 +847,7 @@ img.characterimg {
 <li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。</p></li>
 <li><p><span class="lyterm">免</span>：指免于犯罪。后文还有 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">免于今之世</span>，<a href="#6.19" class="lyref">6.19</a> <span class="lyq">罔之生也幸而免</span>，<a href="#8.3" class="lyref">8.3</a> <span class="lyq">吾知免夫</span>，都要根据上下文具体解读。<span class="lyseealso"><span>【参】</span><span>《史记·酷吏列传》：<span class="lyq">法令者治之具，而非制治清浊之源也。</span>（具：工具，手段。）</span></span></p></li>
 <li><p><a id="chi3a"></a><span class="lyterm">耻</span>：羞惭心，耻辱感。其本字为“恥”，会意为心中羞惭使耳朵赤热。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">好学近乎知，力行近乎仁，知耻近乎勇。知斯三者，则知所以<a href="#xiushen">修身</a>；知所以修身，则知所以治人；知所以治人，则知所以治天下国家矣。</span></span></span></p></li>
-<li><p><span class="lyterm">格</span>：纠正。<span class="lyexample"><span>【例】</span><span>《尚书·周书·冏命》（伪）：<span class="lyq"><a href="#qian1">绳愆纠谬</a>，格其非心。</span>（非心：邪<a href="#pi4">僻</a>之心。）</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·尽心上》：<span class="lyq">善政不如善教之得民也。善政民畏之，善教民爱之。善政得民财，善教得民心。</span></span></span></p></li>
+<li><p><span class="lyterm">格</span>：纠正。<span class="lyexample"><span>【例】</span><span>《尚书·周书·冏命》（伪）：<span class="lyq"><a href="#qian1"><a href="#sheng2a">绳</a>愆纠谬</a>，格其非心。</span>（非心：邪<a href="#pi4">僻</a>之心。）</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·尽心上》：<span class="lyq">善政不如善教之得民也。善政民畏之，善教民爱之。善政得民财，善教得民心。</span></span></span></p></li>
 </ul>
 <div class="lyseealso">
 <p><span>【参】</span><span>《战国策》刘向书录引用本章来批评秦政之弊：<span class="lyq">任刑罚以为治，信小术以为道。……惠不下施，情不上达，君臣相疑，骨肉相疏，化道浅薄，纲纪坏败，民不见义而悬于不宁。抚天下十四岁，天下大溃，诈伪之弊也。其比<a href="#wangdao">王</a>德，岂不远哉！孔子曰：“……”夫使天下有所耻，故化可<a href="#zhi4b">致</a>也。<a href="#gou3a">苟</a>以诈伪偷活取容，自上为之，何以率下？秦之败也，不亦宜乎！</span>（<a id="hua4"></a>化：教化，引申为大治。抚：据有。<a id="tou1"></a>偷：苟且，萎靡怠惰。）</span></p>
@@ -1014,7 +1015,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">干（<span class="lypinyin">gān</span>）禄</span>：挣公家俸禄，即做官。<a id="gan1"></a><span class="lyterm">干</span>：动词，本义为触犯，冲扰，引申为求取，索求，有行为出格的意味，用作谦卑文雅的说法。<span class="lyexample"><span>【例】</span><span>成语“矫情干誉”（矫：逆，违背）。王安石《宝应二三进士见送乞诗》：<span class="lyq">少喜功名尽坦<a href="#tu2">涂</a>，那知干世最崎岖。</span>（干世：涉世，求用于世。）</span></span></p>
-<p><a id="lu4a"></a><span class="lyterm">禄</span>：官俸，当官挣得的薪金。<span class="lyexample"><span>【例】</span><span>成语“高官厚禄”。</span></span></p>
+<p><a id="lu4a"></a><span class="lyterm">禄</span>：官俸，当官挣得的薪资。<span class="lyexample"><span>【例】</span><span>成语“高官厚禄”。</span></span></p>
 </li>
 <li><p><span class="lyterm">多闻阙（<span class="lypinyin">quē</span>）疑</span>：多听取（各方面意见），存疑的地方暂时空着（而不臆断）。成语“多闻阙疑”形容治学谦虚谨慎。<a id="que1"></a><span class="lyterm">阙</span>：空隙，缺口，用作动词，空缺，放着。<span class="lyexample"><span>【例】</span><span>熟语“付之阙如”是说因为条件尚不具备而暂且空着不做。</span></span></p></li>
 <li><p><span class="lyterm">其余</span>：指未闻、未见的事情。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">有所不足，不敢不勉；有余，不敢尽。言顾行，行顾言。君子胡不慥慥尔！</span>（胡：疑问代词，何，谁，哪个。慥慥（<span class="lypinyin">zào</span>）：笃实的样子。）</span></span></p></li>
@@ -5014,10 +5015,10 @@ img.characterimg {
 <a id="15.15"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.15">15.15</a></div>
 <div class="lybloboriginaltext"><p>子曰：“躬自厚而薄责于人，则远怨矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><span class="lyterm"><a href="#gong1a">躬</a>自厚</span>：即躬自重责，相当于说严于律己。<span class="lyterm">躬自</span>：自己，自身，selfward。<span class="lyexample"><span>【例】</span><span>《诗经·卫风·<a href="#meng2">氓</a>》：<span class="lyq">静言思之，躬自悼矣！</span>（悼：哀伤。）</span></span></p>
-<p><a id="ze2a"></a><span class="lyterm">责</span>：要求。<span class="lyseealso"><span>【参】</span><span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">攻其恶，无攻人之恶。</span></span></span></p>
-</li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize">
+<li><p><span class="lyterm"><a href="#gong1a">躬</a>自厚</span>：即躬自重责，相当于说严于律己。<span class="lyterm">躬自</span>：自己，自身，selfward。<span class="lyexample"><span>【例】</span><span>《诗经·卫风·<a href="#meng2">氓</a>》：<span class="lyq">静言思之，躬自悼矣！</span>（悼：哀伤。）</span></span></p></li>
+<li><p><a id="ze2a"></a><span class="lyterm">责</span>：要求。<span class="lyseealso"><span>【参】</span><span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">攻其恶，无攻人之恶。</span></span></span></p></li>
+</ul></div>
 </div>
 <a id="15.16"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#15.16">15.16</a></div>
@@ -5312,7 +5313,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#16.6">16.6</a></div>
 <div class="lybloboriginaltext"><p>孔子曰：“侍于君子有三愆：言未及之而言，谓之躁；言及之而不言，谓之隐；未见颜色而言，谓之瞽。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="qian1"></a><span class="lyterm">愆</span>（<span class="lypinyin">qiān</span>）：罪过，过失。<span class="lyexample"><span>【例】</span><span>成语“绳愆纠谬”（绳：纠正）。</span></span>这里的<span class="lyterm">君子</span>如果理解成<a href="#daren">大人</a>，可能更有现代感，参 <a href="#14.22" class="lyref">14.22</a>  注。</p></li>
+<li><p><a id="qian1"></a><span class="lyterm">愆</span>（<span class="lypinyin">qiān</span>）：罪过，过失。<span class="lyexample"><span>【例】</span><span>成语“绳愆纠谬”（<a id="sheng2a"></a>绳：纠正）。</span></span>这里的<span class="lyterm">君子</span>如果理解成<a href="#daren">大人</a>，可能更有现代感，参 <a href="#14.22" class="lyref">14.22</a>  注。</p></li>
 <li><p><span class="lyterm">言未及之而言</span>。<span class="lyterm">言未及之</span>的主语是君子，<span class="lyterm">而言</span>的主语是侍于君子者。<span class="lyseealso"><span>【参】</span><span><a href="#15.8" class="lyref">15.8</a> </span></span></p></li>
 <li><p><a id="gu3b"></a>无眼珠而盲为<span class="lyterm">瞽</span>（<span class="lypinyin">gǔ</span>），有眼珠而盲为<span class="lykeyword">矇</span>（<span class="lypinyin">méng</span>）。成语“有眼无珠”既可以形容人没有见识，也可以形容没有眼色，<span class="lyterm">未见<a href="#yanse">颜色</a>而言</span>就是后一种。</p></li>
 </ul></div>
@@ -5701,10 +5702,13 @@ img.characterimg {
 <a id="17.25"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#17.25">17.25</a></div>
 <div class="lybloboriginaltext"><p>子曰：“唯女子与小人为难养也，近之则不孙，远之则怨。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li>
+<div class="lyblobannotation">
+<ul class="lyblobitemize"><li>
 <p><span class="lyterm">难养</span>：近似现代口语的难应付、难伺候（上对下的语气）。这是孔子在特定时代的观点，不知因何而发，尽管生动形象，却让现代注家很尴尬。古注多把<span class="lyterm">女子</span>解释为姬妾，<span class="lyterm">小人</span>解释为臣仆。从字面上看，既然存在供养关系，又可以自主地亲近或疏远，这两个词确实不太像泛指，而是说关系较近密的下位者，很自然的例子就是姬妾、宠婢、亲随、弄臣等。在古代，<a href="#daren">小人</a>只是君子的附庸，而一家之中长辈、近亲以外的女性，除了正妻可以举案齐眉，地位确实普遍偏低。如果硬从《论语》里找对应，或许和 <a href="#18.4" class="lyref">18.4</a> <span class="lyq">齐人归女乐</span>有关。</p>
 <p><span class="lyseealso"><span>【参】</span><span>《孝经·孝治》：<span class="lyq">治家者，不敢失于臣妾，而况于妻子乎？</span>（<a id="chen2"></a>臣：男奴，本义为战俘。妾：女奴，本义为有罪之女。）《四书集注》：<span class="lyq">君子之于臣妾，庄以<a href="#li4">莅</a>之，慈以<a href="#xu4a">畜</a>之，则无二者之患矣。</span>《左传·僖公二十四年》（前636年），<a href="#yidihuaxia">狄</a>人助周襄王（前652年—前619年在位）伐郑有功，襄王欲立狄女为王后，大夫富辰的谏言里有<span class="lyq">女德无极，妇怨无终</span>之语，就是说正负区间很大，不知是否对孔子有所启发。晋代杜预对这句谏言的注解，刚好可以移用于孔子的后两句：<span class="lyq">近之则不知止足，远之则忿怨无已。</span>亦参 <a href="#16.8" class="lyref">16.8</a> <span class="lyq">小人不知天命而不畏也，狎大人，侮圣人之言。</span>后来作为蔑称的“儿女子”，即短浅无能之辈，可能也与本章有关，如《史记·淮阴侯列传》：<span class="lyq">信方斩，曰：“吾悔不用蒯通之计，乃为儿女子所诈，岂非天哉！”（指合谋诱骗韩信自投罗网的萧何与吕后。）</span></span></span></p>
-</li></ul></div>
+</li></ul>
+<p><span class="lyseealso"><span>【参】</span><span>梁启超《要籍解题及其读法》中评价荀子学说的话，也适用于本章：<span class="lyq">凡立言总带有几分时代彩色，故孟子贵“知人论世”。荀子生今二千余年前，其言有专为当时之社会而发者，自当分别观之，不可盲从以<a href="#ze2a">责</a>效于今日。但亦不可以今日眼光绳之，遂抹杀其在当日之价值也。至于其学说之含有永久性者——即并非对于时代问题而发言者，则无论何时，则可以咨其严刻之评隲也。</span>（<a id="sheng2"></a>绳：衡量，以……为准。隲（<span class="lypinyin">zhì</span>）：评定。）</span></span></p>
+</div>
 </div>
 <a id="17.26"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#17.26">17.26</a></div>
