Regular update, with 2 fixes for the original text.

--- a/ly.html
+++ b/ly.html
@@ -1689,7 +1689,7 @@ a:link {
 <a id="12.3"></a><div class="lyblob">
 <div class="lyblobtag"><a href="aboly#12.3">12.3</a></div>
 <div class="lytext">
-<p>司马牛问仁，子曰：“仁者，其言也讱。”</p>
+<p>司马牛问仁，子曰：“仁者其言也讱。”</p>
 <p>曰：“其言也讱，斯谓之仁已乎？”子曰：“为之难，言之得无讱乎？”</p>
 </div>
 </div>
@@ -2212,7 +2212,7 @@ a:link {
 </div>
 <a id="15.8"></a><div class="lyblob">
 <div class="lyblobtag"><a href="aboly#15.8">15.8</a></div>
-<div class="lytext"><p>子曰：“可与言而不与言，失人；不可与言而与之言，失言。知者不失人亦不失言。”</p></div>
+<div class="lytext"><p>子曰：“可与言而不与之言，失人；不可与言而与之言，失言。知者不失人亦不失言。”</p></div>
 </div>
 <a id="15.9"></a><div class="lyblob">
 <div class="lyblobtag"><a href="aboly#15.9">15.9</a></div>
