--- a/aboly.html
+++ b/aboly.html
@@ -5723,7 +5723,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#18.1">18.1</a></div>
 <div class="lybloboriginaltext"><p>微子去之，箕子为之奴，比干谏而死。孔子曰：“殷有三仁焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><a id="biganjiziweizi"></a><a href="#shangchao">商朝</a>末代君王<a href="#zhou">纣</a>荒淫无道，天下离心。他的大哥<span class="lyterm">微子</span>（名启，庶母所生）屡谏无果，离朝隐居。<a id="bigan"></a>叔父<span class="lyterm">比干</span>（<span class="lypinyin">gàn</span>）拼死强谏，<span class="lyq">纣怒曰：“吾闻圣人心有七窍”</span>，剖视其心。另一位叔父<span class="lyterm">箕子</span>唯恐社稷不保，殷祀断绝，装疯自污以存身，也被纣王囚禁。</p>
+<p><a id="biganjiziweizi"></a><a href="#shangchao">商朝</a>末代君王<a href="#zhou">纣</a>荒淫无道，天下离心。他的大哥<span class="lyterm">微子</span>（名启，庶母所生）屡谏无果，离朝隐居。<a id="bigan"></a>叔父<span class="lyterm">比干</span>（<span class="lypinyin">gān</span>）拼死强谏，<span class="lyq">纣怒曰：“吾闻圣人心有七窍”</span>，剖视其心。另一位叔父<span class="lyterm">箕子</span>唯恐社稷不保，殷祀断绝，装疯自污以存身，也被纣王囚禁。</p>
 <p><a href="#zhouchao">周</a>灭商后，微子被<a href="#wu">武王</a>复职，后来又被<a href="#chengwang">成王</a>封于<a href="#songguo">宋</a>，以续殷祀。箕子被武王封于朝鲜（今辽东、北朝鲜一带），不必向周朝称臣。相传箕子是朝鲜开化的始祖，建立了“箕子朝鲜”政权（前12世纪—前194年）。事见《史记·殷本纪》、《史记·宋微子世家》。据当地县志载，河南省<a href="#zhaoge">淇县</a>曾有“三仁庙”，毁于太平天国。河南省卫辉市存有始建于北魏的比干庙。</p>
 </li></ul></div>
 </div>
